# zkh

./: .gitignore  README.md  Untitled15.ipynb  data_prep.ipynb  lora_few_shot.ipynb  piperTTS.ipynb  servClassification.ipynb
data/: problem_summaries.csv
frontend/: index.html  package.json  script.js  style.css
services/ml_service/: =0.13  pyproject.toml
services/ml_service/modules/: service_clf.joblib  urgency_lgbm_pipeline.joblib  urgency_meta.json
services/ml_service/modules/service_clf/: service_clf_meta.json
services/ml_service/src/ml_service/: main.py
services/raai/: deps.txt  pyproject.toml
services/raai/src/raai/: main.py
services/whisper_service/: deps.txt  pyproject.toml
services/whisper_service/src/whisper_service/: get_model.py  main.py
