[project]
name = "whisper-service"
version = "0.1.0"
description = ""
authors = [
    {name = "leontevsk1",email = "artemleontevskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "huggingface-hub (>=0.34.4,<0.35.0)",
    "hf-transfer (>=0.1.9,<0.2.0)"
]

[tool.poetry]
packages = [{include = "whisper_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
